Fix errors to not be clipped by summary

--- a/dev/ui/style.css
+++ b/dev/ui/style.css
@@ -80,3 +80,7 @@ BODY > TABLE > TBODY > TR > TD:nth-child(2) > IFRAME {
 	right: 0px;
 	padding-left: 20px !important;
 }
+
+li.test {
+  clear: right;
+}
